--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -22,6 +22,11 @@ jobs:
         ref: ${{ github.event.inputs.deploy_commit }}
 
 
+    - name: Add MERKELY_OWNER and MERKELY_PIPELINE to GITHUB_ENV
+      run: |
+        cat ./merkely.env >> ${GITHUB_ENV}
+
+
     - name: Make Docker image name available for following steps
       run: |
         echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
@@ -34,8 +39,8 @@ jobs:
         docker run \
             --env MERKELY_COMMAND=control_deployment \
             --env MERKELY_FINGERPRINT=docker://${{ env.IMAGE_TAGGED }} \
-            --env MERKELY_OWNER=${{ secrets.MERKELY_OWNER }} \
-            --env MERKELY_PIPELINE=${{ secrets.MERKELY_PIPELINE }} \
+            --env MERKELY_OWNER=${{ env.MERKELY_OWNER }} \
+            --env MERKELY_PIPELINE=${{ env.MERKELY_PIPELINE }} \
             --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
             --rm \
             --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
@@ -49,8 +54,8 @@ jobs:
             --env MERKELY_FINGERPRINT=docker://${{ env.IMAGE_TAGGED }} \
             --env MERKELY_DESCRIPTION="Deployed to production in pipeline" \
             --env MERKELY_ENVIRONMENT=production \
-            --env MERKELY_OWNER=${{ secrets.MERKELY_OWNER }} \
-            --env MERKELY_PIPELINE=${{ secrets.MERKELY_PIPELINE }} \
+            --env MERKELY_OWNER=${{ env.MERKELY_OWNER }} \
+            --env MERKELY_PIPELINE=${{ env.MERKELY_PIPELINE }} \
             --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
             --env GITHUB_SERVER_URL \
             --env GITHUB_REPOSITORY \
