--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -19,6 +19,11 @@ jobs:
         ref: ${{ github.event.inputs.deploy_commit }}
 
 
+    - name: Add MERKELY_OWNER and MERKELY_PIPELINE to GITHUB_ENV
+      run: |
+        cat ./merkely.env >> ${GITHUB_ENV}
+
+
     - name: Make Docker image name available for following steps
       run: |
         echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
@@ -35,8 +40,8 @@ jobs:
             --env MERKELY_NEWEST_SRC_COMMITISH=${{ github.event.inputs.deploy_commit }} \
             --env MERKELY_DESCRIPTION="Approval created by ${GITHUB_ACTOR} on github" \
             --env MERKELY_IS_APPROVED=TRUE \
-            --env MERKELY_OWNER=${{ secrets.MERKELY_OWNER }} \
-            --env MERKELY_PIPELINE=${{ secrets.MERKELY_PIPELINE }} \
+            --env MERKELY_OWNER=${{ env.MERKELY_OWNER }} \
+            --env MERKELY_PIPELINE=${{ env.MERKELY_PIPELINE }} \
             --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
             --rm \
             --volume=/var/run/docker.sock:/var/run/docker.sock \
