--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Add MERKELY_OWNER and MERKELY_PIPELINE to GITHUB_ENV
         run: |
-          cat ./merkely.env >> ${GITHUB_ENV}
+          cat ./Merkely.env >> ${GITHUB_ENV}
 
 
       - name: Make Docker image names available for following steps
