--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -15,13 +15,9 @@ jobs:
       - uses: actions/checkout@v2
 
 
-      - name: Add MERKELY_OWNER and MERKELY_PIPELINE to GITHUB_ENV
+      - name: Add MERKELY_OWNER, MERKELY_PIPELINE, and Docker image names to GITHUB_ENV
         run: |
           cat ./Merkely.env >> ${GITHUB_ENV}
-
-
-      - name: Make Docker image names available for following steps
-        run: |
           echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
           echo "IMAGE_LATEST=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:latest" >> ${GITHUB_ENV}
 
@@ -46,6 +42,8 @@ jobs:
 
 
       - name: Log Docker Image in Merkely
+        run: |
+          echo "Checking run can precede a uses"
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: log_artifact
