Use built-in github.workspace for value of MERKELY_SRC_REPO_ROOT in .github/workflows/request_approval.yml

--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -42,7 +42,7 @@ jobs:
         MERKELY_OLDEST_SRC_COMMITISH: origin/production
         MERKELY_NEWEST_SRC_COMMITISH: ${{ github.event.inputs.deploy_commit }}
         MERKELY_DESCRIPTION: "Approval created by ${GITHUB_ACTOR} on github"
-        MERKELY_SRC_REPO_ROOT: ${PWD}
+        MERKELY_SRC_REPO_ROOT: ${{ github.workspace }}
         MERKELY_IS_APPROVED: "TRUE"
         MERKELY_OWNER: ${{ env.MERKELY_OWNER }}
         MERKELY_PIPELINE: ${{ env.MERKELY_PIPELINE }}
