--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -24,17 +24,17 @@ jobs:
         cat ./Merkely.env >> ${GITHUB_ENV}
 
 
-    - name: Make Docker image name available for following steps
+    - name: Add Docker image name to GITHUB_ENV
       run: |
         echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
 
 
-    - name: Pull the Docker image so its digest can be determined
+    - name: Pull the Docker image so Merkely can get its digest
       run: |
         docker pull ${{ env.IMAGE_TAGGED }}
 
 
-    - name: Request Approval in Merkely
+    - name: Request approval in Merkely
       uses: docker://merkely/change:latest
       env:
         MERKELY_COMMAND: log_approval
