--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ definitions:
 
   export_merkely_env_vars: &export_merkely_env_vars
     export $(cat ${PWD}/Merkelypipe.json)
-    export MERKELY_PIPE_PATH="${PWD}/Merkelypipe.json"
+    export MERKELY_PIPE_PATH="${PWD}/Merkely.env"
 
   export_merkely_pipe_path_env_var: &export_merkely_pipe_path_env_var |
     export MERKELY_PIPE_PATH="${PWD}/Merkelypipe.bitbucket.json"
