Drop Merkely.env file and use .env file for each ci environment in env-files/ dir

--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Add MERKELY_OWNER and MERKELY_PIPELINE to GITHUB_ENV
       run: |
-        cat ./Merkely.env >> ${GITHUB_ENV}
+        cat ./env-files/github.env >> ${GITHUB_ENV}
 
 
     - name: Add Docker image name to GITHUB_ENV
