--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Add MERKELY_OWNER, MERKELY_PIPELINE to GITHUB_ENV
         run: |
-          cat ./Merkely.env >> ${GITHUB_ENV}
+          cat ./env-files/github.env >> ${GITHUB_ENV}
 
 
       - name: Add Docker image names to GITHUB_ENV
