--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,7 +17,7 @@ definitions:
     export MERKELY_FINGERPRINT="sha256://${SHA256}/${IMAGE_TAGGED}"
 
   export_merkely_env_vars: &export_merkely_env_vars
-    export $(cat ${PWD}/Merkely.env)
+    export $(cat ${PWD}/env-files/bitbucket.env)
     export MERKELY_PIPE_PATH="${PWD}/Merkelypipe.json"
 
   export_merkely_pipe_path_env_var: &export_merkely_pipe_path_env_var |
