Drop MERKELY_PIPE_PATH from all commands except declare_pipeline in bitbucket-pipelines.yml

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,9 +20,6 @@ definitions:
     export $(cat ${PWD}/env-files/bitbucket.env)
     export MERKELY_PIPE_PATH="${PWD}/Merkelypipe.json"
 
-  export_merkely_pipe_path_env_var: &export_merkely_pipe_path_env_var |
-    export MERKELY_PIPE_PATH="${PWD}/Merkelypipe.bitbucket.json"
-
   steps:
 
     - step: &merkely_declare_pipeline
@@ -72,7 +69,7 @@ definitions:
         services: [ docker ]
         script:
           - *export_merkely_fingerprint_env_var
-          - *export_merkely_pipe_path_env_var
+          - *export_merkely_env_vars
           - docker run
             --name container
             --entrypoint ./entrypoint-unit_test.sh
@@ -97,7 +94,7 @@ definitions:
         services: [ docker ]
         script:
           - *export_merkely_fingerprint_env_var
-          - *export_merkely_pipe_path_env_var
+          - *export_merkely_env_vars
           - mkdir -p build/security
           - docker run
               --rm
@@ -108,10 +105,11 @@ definitions:
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_test"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
               MERKELY_EVIDENCE_TYPE: "security"
               MERKELY_TEST_RESULTS_DIR: "${PWD}/build/security/"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
@@ -120,7 +118,7 @@ definitions:
         services: [ docker ]
         script:
           - *export_merkely_fingerprint_env_var
-          - *export_merkely_pipe_path_env_var
+          - *export_merkely_env_vars
           - mkdir -p build/coverage
           - docker run
               --entrypoint ./entrypoint-coverage.sh
@@ -132,11 +130,12 @@ definitions:
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_evidence"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
               MERKELY_EVIDENCE_TYPE: "coverage"
               MERKELY_IS_COMPLIANT: "TRUE"
               MERKELY_DESCRIPTION: "${COVERAGE_SUMMARY}"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
@@ -147,14 +146,15 @@ definitions:
           - echo YOUR DEPLOYMENT COMMAND HERE
           - # Log deployment in Merkely
           - *export_merkely_fingerprint_env_var
-          - *export_merkely_pipe_path_env_var
+          - *export_merkely_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_deployment"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
               MERKELY_DESCRIPTION: "Deployed to staging in pipeline"
               MERKELY_ENVIRONMENT: "staging"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
@@ -163,17 +163,18 @@ definitions:
         services: [ docker ]
         script:
           - *export_merkely_fingerprint_env_var
-          - *export_merkely_pipe_path_env_var
+          - *export_merkely_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_approval"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
               MERKELY_OLDEST_SRC_COMMITISH: "origin/production"
               MERKELY_NEWEST_SRC_COMMITISH: "${BITBUCKET_COMMIT}"
               MERKELY_DESCRIPTION: "Production release requested"
               MERKELY_IS_APPROVED: "FALSE"
               MERKELY_SRC_REPO_ROOT: "${PWD}"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
@@ -183,12 +184,13 @@ definitions:
         trigger: manual
         script:
           - *export_merkely_fingerprint_env_var
-          - *export_merkely_pipe_path_env_var
+          - *export_merkely_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "control_deployment"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
           - echo YOUR DEPLOYMENT COMMAND HERE
@@ -196,10 +198,11 @@ definitions:
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_deployment"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
               MERKELY_DESCRIPTION: "Deployed to production in pipeline"
               MERKELY_ENVIRONMENT: "production"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
           - git checkout --track origin/production
