--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,15 +10,16 @@ definitions:
     export IMAGE_TAGGED="${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)"
     export IMAGE_LATEST="${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-latest"
 
-  export_merkely_fingerprint_env_var: &export_merkely_fingerprint_env_var |
+  export_merkely_fingerprint_env_vars: &export_merkely_fingerprint_env_vars |
     export IMAGE_TAGGED="${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)"
     docker pull ${IMAGE_TAGGED}
     export SHA256=$(docker inspect --format='{{index .RepoDigests 0}}' ${IMAGE_TAGGED} | cut -d ':' -f 2)
     export MERKELY_FINGERPRINT="sha256://${SHA256}/${IMAGE_TAGGED}"
-
-  export_merkely_env_vars: &export_merkely_env_vars
     export $(cat ${PWD}/env-files/bitbucket.env)
+
+  export_merkely_pipeline_env_vars: &export_merkely_pipeline_env_vars
     export MERKELY_PIPE_PATH="${PWD}/Merkelypipe.json"
+    export $(cat ${PWD}/env-files/bitbucket.env)
 
   steps:
 
@@ -26,7 +27,7 @@ definitions:
         name: Declare Merkely Pipeline
         services: [ docker ]
         script:
-          - *export_merkely_env_vars
+          - *export_merkely_pipeline_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "declare_pipeline"
@@ -52,8 +53,7 @@ definitions:
         name: Log Docker image in Merkely
         services: [ docker ]
         script:
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+          - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_artifact"
@@ -68,8 +68,7 @@ definitions:
         name: Run units tests, log results in Merkely
         services: [ docker ]
         script:
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+          - *export_merkely_fingerprint_env_vars
           - docker run
             --name container
             --entrypoint ./entrypoint-unit_test.sh
@@ -93,8 +92,7 @@ definitions:
         name: Run security analysis, log results in Merkely
         services: [ docker ]
         script:
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+          - *export_merkely_fingerprint_env_vars
           - mkdir -p build/security
           - docker run
               --rm
@@ -117,8 +115,7 @@ definitions:
         name: Run coverage analysis, log results in Merkely
         services: [ docker ]
         script:
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+          - *export_merkely_fingerprint_env_vars
           - mkdir -p build/coverage
           - docker run
               --entrypoint ./entrypoint-coverage.sh
@@ -140,13 +137,15 @@ definitions:
 
 
     - step: &deploy_to_staging
-        name: Deploy to staging, log deployment in Merkely
-        services: [ docker ]
+        name: Deploy to staging
         script:
           - echo YOUR DEPLOYMENT COMMAND HERE
-          - # Log deployment in Merkely
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+
+    - step: &merkely_log_deployment_to_staging
+        name: Log deploymnet to staging in Merkely
+        services: [ docker ]
+        script:
+          - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_deployment"
@@ -158,12 +157,11 @@ definitions:
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
-    - step: &request_approval_for_deployment
+    - step: &merkely_request_approval_for_deployment
         name: Request approval for deployment in Merkely
         services: [ docker ]
         script:
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+          - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_approval"
@@ -178,13 +176,12 @@ definitions:
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
-    - step: &deploy_to_production
-        name: Deploy to Production
+    - step: &merkely_check_deployment_approved
+        name: Check deployment to Production approved in Merkely
         services: [ docker ]
         trigger: manual
         script:
-          - *export_merkely_fingerprint_env_var
-          - *export_merkely_env_vars
+          - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "control_deployment"
@@ -193,8 +190,18 @@ definitions:
               MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
+
+    - step: &deploy_to_production
+        name: Deploy to Production
+        script:
           - echo YOUR DEPLOYMENT COMMAND HERE
 
+
+    - step: &merkely_log_deployment_to_production
+        name: Log deploy to Production in Merkely
+        services: [ docker ]
+        script:
+          - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
               MERKELY_COMMAND: "log_deployment"
@@ -205,6 +212,10 @@ definitions:
               MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
               MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
+
+    - step: &update_tracking_branch
+        name: Update tracking branch
+        script:
           - git checkout --track origin/production
           - git merge ${BITBUCKET_COMMIT}
           - git push origin production
@@ -220,5 +231,9 @@ pipelines:
       - step: *run_security_analysis
       - step: *run_coverage_analysis
       - step: *deploy_to_staging
-      - step: *request_approval_for_deployment
+      - step: *merkely_log_deployment_to_staging
+      - step: *merkely_request_approval_for_deployment
+      - step: *merkely_check_deployment_approved
       - step: *deploy_to_production
+      - step: *merkely_log_deployment_to_production
+      - step: *update_tracking_branch
