Add artifacts: to bitbucket-pipelines.yml to save test results for next log step

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -67,6 +67,8 @@ definitions:
     - step: &run_unit_tests
         name: Run units tests
         services: [ docker ]
+        artifacts:
+          - ${PWD}/build/test/**
         script:
           - *export_image_env_vars
           - docker run
