--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -30,11 +30,11 @@ definitions:
           - *export_merkely_pipeline_env_vars
           - pipe: docker://merkely/change:latest
             variables:
-              MERKELY_COMMAND: "declare_pipeline"
-              MERKELY_OWNER: "${MERKELY_OWNER}"
-              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
-              MERKELY_PIPE_PATH: "${MERKELY_PIPE_PATH}"
-              MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
+              MERKELY_COMMAND: declare_pipeline
+              MERKELY_OWNER: ${MERKELY_OWNER}
+              MERKELY_PIPELINE: ${MERKELY_PIPELINE}
+              MERKELY_PIPE_PATH: ${MERKELY_PIPE_PATH}
+              MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
     - step: &build_and_publish_docker_image
@@ -56,19 +56,17 @@ definitions:
           - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
-              MERKELY_COMMAND: "log_artifact"
-              MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
+              MERKELY_COMMAND: log_artifact
+              MERKELY_FINGERPRINT: ${MERKELY_FINGERPRINT}
               MERKELY_IS_COMPLIANT: "TRUE"
-              MERKELY_OWNER: "${MERKELY_OWNER}"
-              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
-              MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
+              MERKELY_OWNER: ${MERKELY_OWNER}
+              MERKELY_PIPELINE: ${MERKELY_PIPELINE}
+              MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
 
 
     - step: &run_unit_tests
         name: Run units tests
         services: [ docker ]
-        artifacts:
-          - ${PWD}/build/test/**
         script:
           - *export_image_env_vars
           - docker run
@@ -78,6 +76,8 @@ definitions:
           - mkdir -p build/test
           - docker cp container:/code/build/test/ ${PWD}/build
           - docker rm container
+        artifacts:
+          - ${PWD}/build/test/**
 
 
     - step: &merkely_log_unit_test_results
@@ -87,7 +87,7 @@ definitions:
           - *export_merkely_fingerprint_env_vars
           - pipe: docker://merkely/change:latest
             variables:
-              MERKELY_COMMAND: "log_test"
+              MERKELY_COMMAND: log_test
               MERKELY_FINGERPRINT: "${MERKELY_FINGERPRINT}"
               MERKELY_EVIDENCE_TYPE: "unit_test"
               MERKELY_TEST_RESULTS_DIR: "${PWD}/build/test/"
